--- a/POS.Models/POS.Models.csproj
+++ b/POS.Models/POS.Models.csproj
@@ -46,6 +46,8 @@
     <Compile Include="EntityModel\ExpenseCategory.cs" />
     <Compile Include="EntityModel\ExpenseDetails.cs" />
     <Compile Include="EntityModel\ExpenseItem.cs" />
+    <Compile Include="EntityModel\ExpenseReport.cs" />
+    <Compile Include="EntityModel\ExpenseReportDetails.cs" />
     <Compile Include="EntityModel\Item.cs" />
     <Compile Include="EntityModel\ItemCategory.cs" />
     <Compile Include="EntityModel\OfficialInfo.cs" />
@@ -54,9 +56,14 @@
     <Compile Include="EntityModel\PersonalInfo.cs" />
     <Compile Include="EntityModel\Purchase.cs" />
     <Compile Include="EntityModel\PurchaseDetails.cs" />
+    <Compile Include="EntityModel\PurchaseReport.cs" />
+    <Compile Include="EntityModel\PurchaseReportDetails.cs" />
     <Compile Include="EntityModel\Sales.cs" />
     <Compile Include="EntityModel\SalesDetails.cs" />
+    <Compile Include="EntityModel\SalesReport.cs" />
+    <Compile Include="EntityModel\SalesReportDetails.cs" />
     <Compile Include="EntityModel\Stock.cs" />
+    <Compile Include="EntityModel\StockDetails.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup />
