--- a/PointOfSalesSystem/bin/PointOfSalesSystem.dll.config
+++ b/PointOfSalesSystem/bin/PointOfSalesSystem.dll.config
@@ -8,6 +8,12 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
+  <!--
+  Below this is my connection String and 
+  -->
+  <connectionStrings>
+    <add name="PosManagementDbContext" connectionString=" Data Source=.\Hello; Database=PosDB; Integrated Security=true; MultipleActiveResultSets=true" providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
