--- a/POS.Models/POS.Models.csproj
+++ b/POS.Models/POS.Models.csproj
@@ -64,7 +64,7 @@
     <Compile Include="EntityModel\Party.cs" />
     <Compile Include="EntityModel\PersonalInfo.cs" />
     <Compile Include="EntityModel\PurchaseReceving.cs" />
-    <Compile Include="EntityModel\PurchaseDetails.cs" />
+    <Compile Include="EntityModel\PurchaseReceivingDetails.cs" />
     <Compile Include="EntityModel\PurchaseReport.cs" />
     <Compile Include="EntityModel\PurchaseReportDetails.cs" />
     <Compile Include="EntityModel\Sales.cs" />
