--- a/POS.Repository/POS.Repository.csproj
+++ b/POS.Repository/POS.Repository.csproj
@@ -54,8 +54,22 @@
       <DependentUpon>201805251134126_Donehopeso.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
+    <Compile Include="obj\Debug\TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs" />
+    <Compile Include="obj\Debug\TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs" />
+    <Compile Include="obj\Debug\TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\BranchRepository.cs" />
+    <Compile Include="Repositories\EmployeeInfoRepository.cs" />
+    <Compile Include="Repositories\ExpenseCategoryRepository.cs" />
+    <Compile Include="Repositories\ExpenseDetailsRepository.cs" />
+    <Compile Include="Repositories\ExpenseItemRepository.cs" />
+    <Compile Include="Repositories\ExpenseReportDetailsRepository.cs" />
+    <Compile Include="Repositories\ExpenseReportRepository.cs" />
+    <Compile Include="Repositories\ExpenseRepository.cs" />
+    <Compile Include="Repositories\IncomeReportDetailsRepository.cs" />
+    <Compile Include="Repositories\IncomeReportRepository.cs" />
     <Compile Include="Repositories\ItemCategoryRepository.cs" />
+    <Compile Include="Repositories\ItemRepository.cs" />
     <Compile Include="Repositories\OfficialInfoRepository.cs" />
     <Compile Include="Repositories\OrganizationsRepository.cs" />
     <Compile Include="Repositories\PartyRepository.cs" />
@@ -74,9 +88,22 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="bin\Debug\POS.Models.dll.config" />
+    <None Include="bin\Debug\POS.Repository.dll.config" />
+    <None Include="obj\Release\POS.Repository.csproj.CoreCompileInputs.cache" />
+    <None Include="obj\Release\POS.Repository.csprojAssemblyReference.cache" />
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Content Include="bin\Debug\EntityFramework.dll" />
+    <Content Include="bin\Debug\EntityFramework.SqlServer.dll" />
+    <Content Include="bin\Debug\EntityFramework.SqlServer.xml" />
+    <Content Include="bin\Debug\EntityFramework.xml" />
+    <Content Include="bin\Debug\POS.Models.dll" />
+    <Content Include="bin\Debug\POS.Models.pdb" />
+    <Content Include="bin\Debug\POS.Repository.dll" />
+    <Content Include="bin\Debug\POS.Repository.pdb" />
+  </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\POS.Models\POS.Models.csproj">
       <Project>{2202c685-aee0-4bbe-b23b-2aeb8ff8a969}</Project>
@@ -87,6 +114,9 @@
     <EmbeddedResource Include="Migrations\201805251134126_Donehopeso.resx">
       <DependentUpon>201805251134126_Donehopeso.cs</DependentUpon>
     </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="bin\Release\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
