--- a/PointOfSalesSystem/bin/PointOfSalesSystem.dll.config
+++ b/PointOfSalesSystem/bin/PointOfSalesSystem.dll.config
@@ -12,7 +12,7 @@
   Below this is my connection String and 
   -->
   <connectionStrings>
-    <add name="PosManagementDbContext" connectionString=" Data Source=.\TONMOY; Database=PosDB; Integrated Security=true; MultipleActiveResultSets=true" providerName="System.Data.SqlClient" />
+    <add name="PosManagementDbContext" connectionString=" Data Source=.\Hello; Database=PosDB; Integrated Security=true; MultipleActiveResultSets=true" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
