Branch OrganizationList Prblem Solved

--- a/POS.Repository/POS.Repository.csproj
+++ b/POS.Repository/POS.Repository.csproj
@@ -53,6 +53,10 @@
     <Compile Include="Migrations\201805262042131_AfterCreatingVM.Designer.cs">
       <DependentUpon>201805262042131_AfterCreatingVM.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201805281223059_OrganizationToOrganizations.cs" />
+    <Compile Include="Migrations\201805281223059_OrganizationToOrganizations.Designer.cs">
+      <DependentUpon>201805281223059_OrganizationToOrganizations.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="obj\Debug\TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs" />
     <Compile Include="obj\Debug\TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs" />
@@ -116,6 +120,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201805262042131_AfterCreatingVM.resx">
       <DependentUpon>201805262042131_AfterCreatingVM.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201805281223059_OrganizationToOrganizations.resx">
+      <DependentUpon>201805281223059_OrganizationToOrganizations.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
