--- a/PointOfSalesSystem/PointOfSalesSystem.csproj
+++ b/PointOfSalesSystem/PointOfSalesSystem.csproj
@@ -211,6 +211,7 @@
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\BranchesController.cs" />
+    <Compile Include="Controllers\ExpenseCategoryController.cs" />
     <Compile Include="Controllers\ItemCategoryController.cs" />
     <Compile Include="Controllers\ItemController.cs" />
     <Compile Include="Controllers\OrganizationsController.cs" />
@@ -218,6 +219,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\ViewModels\BranchesCreateVM.cs" />
+    <Compile Include="Models\ViewModels\ExpenseCategoryCreateVM.cs" />
     <Compile Include="Models\ViewModels\ItemCategoryCreateVM.cs" />
     <Compile Include="Models\ViewModels\ItemCreateVM.cs" />
     <Compile Include="Models\ViewModels\OrganizationsCreateVM.cs" />
@@ -236,6 +238,7 @@
     <Content Include="Views\Organizations\Create.cshtml" />
     <Content Include="Views\Branches\Create.cshtml" />
     <Content Include="Views\Item\Create.cshtml" />
+    <Content Include="Views\ExpenseCategory\Create.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
