--- a/PointOfSalesSystem/PointOfSalesSystem.csproj
+++ b/PointOfSalesSystem/PointOfSalesSystem.csproj
@@ -217,6 +217,7 @@
     <Compile Include="Controllers\ItemController.cs" />
     <Compile Include="Controllers\OrganizationsController.cs" />
     <Compile Include="Controllers\PartyController.cs" />
+    <Compile Include="Controllers\PurchaseReceivingController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -227,6 +228,7 @@
     <Compile Include="Models\ViewModels\ItemCreateVM.cs" />
     <Compile Include="Models\ViewModels\OrganizationsCreateVM.cs" />
     <Compile Include="Models\ViewModels\PartyCreateVM.cs" />
+    <Compile Include="Models\ViewModels\PurchaseReceivingCreateVM.cs" />
     <Compile Include="obj\Debug\TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs" />
     <Compile Include="obj\Debug\TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs" />
     <Compile Include="obj\Debug\TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs" />
@@ -245,6 +247,7 @@
     <Content Include="Views\ExpenseCategory\Create.cshtml" />
     <Content Include="Views\ExpenseItem\Create.cshtml" />
     <Content Include="Views\Party\Create.cshtml" />
+    <Content Include="Views\PurchaseReceiving\Create.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
