New property added to the EmployeeInfo Entity Model

--- a/POS.Repository/POS.Repository.csproj
+++ b/POS.Repository/POS.Repository.csproj
@@ -53,6 +53,10 @@
     <Compile Include="Migrations\201805291957019_initial_database.Designer.cs">
       <DependentUpon>201805291957019_initial_database.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201805300154562_EmployeeInfoClassUpdated.cs" />
+    <Compile Include="Migrations\201805300154562_EmployeeInfoClassUpdated.Designer.cs">
+      <DependentUpon>201805300154562_EmployeeInfoClassUpdated.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="obj\Debug\TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs" />
     <Compile Include="obj\Debug\TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs" />
@@ -114,6 +118,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201805291957019_initial_database.resx">
       <DependentUpon>201805291957019_initial_database.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201805300154562_EmployeeInfoClassUpdated.resx">
+      <DependentUpon>201805300154562_EmployeeInfoClassUpdated.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
