--- a/POS.Repository/POS.Repository.csproj
+++ b/POS.Repository/POS.Repository.csproj
@@ -49,13 +49,9 @@
   <ItemGroup>
     <Compile Include="Base\Repository.cs" />
     <Compile Include="DatabaseContext\PosManagementDbContext.cs" />
-    <Compile Include="Migrations\201805291957019_initial_database.cs" />
-    <Compile Include="Migrations\201805291957019_initial_database.Designer.cs">
-      <DependentUpon>201805291957019_initial_database.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201805300154562_EmployeeInfoClassUpdated.cs" />
-    <Compile Include="Migrations\201805300154562_EmployeeInfoClassUpdated.Designer.cs">
-      <DependentUpon>201805300154562_EmployeeInfoClassUpdated.cs</DependentUpon>
+    <Compile Include="Migrations\201805301038536_initial.cs" />
+    <Compile Include="Migrations\201805301038536_initial.Designer.cs">
+      <DependentUpon>201805301038536_initial.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="obj\Debug\TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs" />
@@ -116,11 +112,8 @@
     <Folder Include="bin\Release\" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201805291957019_initial_database.resx">
-      <DependentUpon>201805291957019_initial_database.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201805300154562_EmployeeInfoClassUpdated.resx">
-      <DependentUpon>201805300154562_EmployeeInfoClassUpdated.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201805301038536_initial.resx">
+      <DependentUpon>201805301038536_initial.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
