ExpenseVIEW AND CONTROLLER ARE UNDER CONSTRUCTION

--- a/PointOfSalesSystem/PointOfSalesSystem.csproj
+++ b/PointOfSalesSystem/PointOfSalesSystem.csproj
@@ -214,6 +214,7 @@
     <Compile Include="Controllers\EmployeeInfoController.cs" />
     <Compile Include="Controllers\ExpenseCategoryController.cs" />
     <Compile Include="Controllers\ExpenseItemController.cs" />
+    <Compile Include="Controllers\ExpensesController.cs" />
     <Compile Include="Controllers\ItemCategoryController.cs" />
     <Compile Include="Controllers\ItemController.cs" />
     <Compile Include="Controllers\OrganizationsController.cs" />
@@ -225,6 +226,7 @@
     <Compile Include="Models\ViewModels\BranchesCreateVM.cs" />
     <Compile Include="Models\ViewModels\EmployeeInfoCreateVM.cs" />
     <Compile Include="Models\ViewModels\ExpenseCategoryCreateVM.cs" />
+    <Compile Include="Models\ViewModels\ExpenseCreateVM.cs" />
     <Compile Include="Models\ViewModels\ExpenseItemCreateVM.cs" />
     <Compile Include="Models\ViewModels\ItemCategoryCreateVM.cs" />
     <Compile Include="Models\ViewModels\ItemCreateVM.cs" />
@@ -251,6 +253,7 @@
     <Content Include="Views\Party\Create.cshtml" />
     <Content Include="Views\PurchaseReceiving\Create.cshtml" />
     <Content Include="Views\EmployeeInfo\Create.cshtml" />
+    <Content Include="Views\Expenses\Create.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
