Sell View Page & Controller

--- a/PointOfSalesSystem/PointOfSalesSystem.csproj
+++ b/PointOfSalesSystem/PointOfSalesSystem.csproj
@@ -220,6 +220,7 @@
     <Compile Include="Controllers\OrganizationsController.cs" />
     <Compile Include="Controllers\PartyController.cs" />
     <Compile Include="Controllers\PurchaseReceivingController.cs" />
+    <Compile Include="Controllers\SalesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -233,6 +234,7 @@
     <Compile Include="Models\ViewModels\OrganizationsCreateVM.cs" />
     <Compile Include="Models\ViewModels\PartyCreateVM.cs" />
     <Compile Include="Models\ViewModels\PurchaseReceivingCreateVM.cs" />
+    <Compile Include="Models\ViewModels\SalesCreateVM.cs" />
     <Compile Include="obj\Debug\TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs" />
     <Compile Include="obj\Debug\TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs" />
     <Compile Include="obj\Debug\TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs" />
@@ -254,6 +256,7 @@
     <Content Include="Views\PurchaseReceiving\Create.cshtml" />
     <Content Include="Views\EmployeeInfo\Create.cshtml" />
     <Content Include="Views\Expenses\Create.cshtml" />
+    <Content Include="Views\Sales\Create.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
