--- a/PointOfSalesSystem/PointOfSalesSystem.csproj
+++ b/PointOfSalesSystem/PointOfSalesSystem.csproj
@@ -198,6 +198,7 @@
     <Content Include="obj\Debug\PointOfSalesSystem.pdb" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
+    <Content Include="Scripts\Employee Info\EmployeeInfo.js" />
     <Content Include="Scripts\ExpenseCategory\ExpenseCategoryRadio.js" />
     <Content Include="Scripts\ItemCategory\ItemCategoryRadio.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
