EmployeeInfo Jquery file almost done

--- a/POS.Repository/POS.Repository.csproj
+++ b/POS.Repository/POS.Repository.csproj
@@ -53,6 +53,10 @@
     <Compile Include="Migrations\201805310717382_initial.Designer.cs">
       <DependentUpon>201805310717382_initial.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201805311132051_virtualbranchincluded.cs" />
+    <Compile Include="Migrations\201805311132051_virtualbranchincluded.Designer.cs">
+      <DependentUpon>201805311132051_virtualbranchincluded.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="obj\Debug\TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs" />
     <Compile Include="obj\Debug\TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs" />
@@ -114,6 +118,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201805310717382_initial.resx">
       <DependentUpon>201805310717382_initial.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201805311132051_virtualbranchincluded.resx">
+      <DependentUpon>201805311132051_virtualbranchincluded.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
