--- a/POS.Repository/POS.Repository.csproj
+++ b/POS.Repository/POS.Repository.csproj
@@ -57,6 +57,10 @@
     <Compile Include="Migrations\201806011155291_Expense.Designer.cs">
       <DependentUpon>201806011155291_Expense.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201806011839597_ExpenseItemChangeswithDescription.cs" />
+    <Compile Include="Migrations\201806011839597_ExpenseItemChangeswithDescription.Designer.cs">
+      <DependentUpon>201806011839597_ExpenseItemChangeswithDescription.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="obj\Debug\TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs" />
     <Compile Include="obj\Debug\TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs" />
@@ -121,6 +125,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201806011155291_Expense.resx">
       <DependentUpon>201806011155291_Expense.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201806011839597_ExpenseItemChangeswithDescription.resx">
+      <DependentUpon>201806011839597_ExpenseItemChangeswithDescription.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
